syntax = "proto3";
package vm_runtime;
option go_package = "vm/server";

service VmRuntime {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc ExecuteOperator(ExecuteRequest) returns (ExecuteResponse);
}

message CreateRequest {
    uint64 projectID = 1;
    string content = 2;
    string expParam = 3;
}

message CreateResponse {
}

message ExecuteRequest {
    uint64 projectID = 1;
    string param = 2;
}

message ExecuteResponse {
    bytes result = 1;
}
